test/fail/unused-exception.mo
module {
    public func foo() : async () {
        try { } catch (exception) {};
    };
};
